# dysarthria-bigdata-pipeline-cloud

./: DOCUMENTATION.md  README.md  config.py  dashboard.html  docker-compose.yml  kafka_producer.py  requirements.txt  spark_feature_extraction.py  spark_streaming_consumer.py  spark_wer_analytics.py
benchmark/: sequential_vs_spark.py
dags/: dysarthria_pipeline_dag.py
data/features/mel_features.parquet/: _SUCCESS  part-00000.parquet
data/results/: inference_results.csv
data/results/analytics_summary.parquet/: _SUCCESS  part-00000.parquet
dysarthic-speech/: .gitignore  README.md  index.html  package-lock.json  package.json  test.txt  vite.config.ts
dysarthic-speech/knowlegde_base/: .env.example  build_kb.py  correct.py  input.txt  pyproject.toml  requirements.txt  server.py
dysarthic-speech/knowlegde_base/kb/: __init__.py  models.py  storage.py
dysarthic-speech/knowlegde_base/kb_data/: current_speaker.txt
dysarthic-speech/knowlegde_base/kb_data/speakers/: 101e1dbe4c45.json  1ac1755a2e2f.json  1da7d3c536d4.json  60196b3ce349.json  762abb38c7ee.json  82ff32ea6f25.json  bcf34855c148.json  cb3fa127d087.json  f93a8c886f75.json
dysarthic-speech/knowlegde_base/kb_data/users/: jivesh.txt  unmesh.txt
dysarthic-speech/src/: App.tsx  index.css  main.tsx
dysarthic-speech/src/animations/: particles.ts  variants.ts
dysarthic-speech/src/components/: AudioWaveform.tsx  BatchSimulator.tsx  EducationalSection.tsx  Footer.tsx  Header.tsx  KnowledgeBasePage.tsx  LiveTranscript.tsx  NeuralVisualizer.tsx  (+6 more)
pipeline/: spark_augment_extract.py  spark_wer_analytics.py
(+10 files in other folders)
