[project]
name = "knowlegde-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
]
